opensesame (3.0.1a1-ubuntu1) vivid; urgency=medium

  * Bugs fixed
    - Fix crash on fallback_console reset
    - Catch syntax warnings in inline_script items
    - Update srbox plugin to avoid warnings
  * Improvements
    - Give more informative error messages when using invalid variable names
    - Update auto_example plugin

 -- Sebastiaan Mathot <sebastiaan@mantis>  Tue, 20 Oct 2015 10:58:57 +0200

opensesame (3.0.0-ubuntu1) vivid; urgency=medium

  * New major release

 -- Sebastiaan Mathot <sebastiaan@mantis>  Sun, 27 Sep 2015 16:18:16 +0200

opensesame (2.9.7-ubuntu1) vivid; urgency=medium

  * Improvements
    - Add append menu to overview and sequence
    - Add permanently delete menu option to unused items
  * Bugs fixed
    - Use px (not pt) as units in font GUI
    - Explicitly set window type in psycho backend (#331)
    - Fix recursion errors in drag-and-drop
    - Restore structure when a drag is canceled (#337)
    - Fix inconsistent folding/unfolding behavior in overview area (#336)
    - Fix missing debug output on Android (#346)
    - Allow uppercase text input on Android (#341)
    - Allow external links in notification dialog (#340)
    - Fix drag-and-drop between different instances of OpenSesame (#338)
    - Fix a crash when dropping an item onto an unused item (#343)
    - Fix a crash on Android when there are filenames with special characters in the file pool (#345)

 -- Sebastiaan Mathot <sebastiaan@mantis>  Wed, 24 Jun 2015 19:27:04 +0200

opensesame (2.9.6-ubuntu1) vivid; urgency=medium

  * Improvements
    - Use the same default logfile in opensesamerun and opensesame
    - srbox plug-in: turn off all lights on init
    - srbox plug-in: don't search (non-existent) COM0 on Windows
    - Add visual drop indicator
  * Bugs fixed
    - Refresh file pool when opening experiment from command line (#320)
    - Fix unicode bugs when launching opensesame and opensesamerun from command line (#323)